add link to project

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <div>
                         <div class="project-title">Passer Rating Calculator</div>
                         <div class="project-desc">A calculator that assesses the efficiency of a quarterback's passing
-                            performance in American football</div>
+                            performance in American football (NFL)</div>
                     </div>
-                    <a class="project-link" href="https://jimkellyc.github.io/Passer-Rating---NFL/" target="_blank">View
+                    <a class="project-link" href="https://jimkellyc.github.io/PasserRatingNFL/" target="_blank">View
                         Project</a>
                 </div>
             </div>
