--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jim-Kelly - Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="/css/styles.css" type="text/css">
 </head>
 
 <body>
     <header>
         <h1>Jim-Kelly Clervoyant</h1>
-        <p>Junior Web Developer</p>
+        <p>Développeur Web Junior</p>
         <nav>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
@@ -24,7 +24,7 @@
         <section id="about" class="about">
             <p>
                 Je souhaite contribuer à une équipe ou à une entreprise dynamique où mes compétences en informatique
-                seront mises en valeur. Passionné par le développement web, j'ai acquis de l'expérience dans la création
+                seront mises en valeur. J'ai acquis de l'expérience dans la création
                 de sites modernes et réactifs. J'aime relever de nouveaux défis techniques et collaborer avec d'autres
                 professionnels pour atteindre des objectifs communs. Mon objectif est de continuer à apprendre et à
                 évoluer dans le domaine de la technologie.
@@ -55,8 +55,7 @@
         </section>
     </div>
     <footer>
-        &copy; 2024 Jim Kelly Clervoyant. All rights reserved.
+        &copy; 2025 Jim Kelly Clervoyant. All rights reserved.
     </footer>
 </body>
-
 </html>
