--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
                     <a class="project-link" href="https://jimkellyc.github.io/PasserRatingNFL/" target="_blank">View
                         Project</a>
                 </div>
+                <div class="project-card">
+                    <div>
+                        <div class="project-title">Switch</div>
+                        <div class="project-desc">A light switch app</div>
+                    </div>
+                    <a class="project-link" href="https://jimkellyc.github.io/Light-Switch/" target="_blank">View
+                        Project</a>
+                </div>
             </div>
         </section>
         <section id="contact" style="margin-top:2.5rem;">
