--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </nav>
     </header>
     <div class="container">
-        <h2 class="section-title">About Me</h2>
         <section id="about" class="about">
+            <h2 class="section-title">About Me</h2>
             <p>
                 Je souhaite contribuer à une équipe ou à une entreprise dynamique où mes compétences en informatique
                 seront mises en valeur. J'ai acquis de l'expérience dans la création
@@ -42,20 +42,43 @@
                     <a class="project-link" href="https://jimkellyc.github.io/PasserRatingNFL/" target="_blank">View
                         Project</a>
                 </div>
+
             </div>
         </section>
-        <section id="contact" style="margin-top:2.5rem;">
+        <section style="margin-top:2.5rem;">
             <h2 class="section-title">Contact</h2>
             <p>
-                Feel free to reach out via <a href="mailto:jimkellyclervoyant@gmail.com"
-                    style="color:var(--accent);text-decoration:underline;">email</a> or connect with me on
-                <a href="https://www.linkedin.com/in/jim-kelly-clervoyant/"
-                    style="color:var(--accent);text-decoration:underline;">LinkedIn</a>.
-            </p>
+                    Feel free to reach out via email or connect with me on
+                    <a href="https://www.linkedin.com/in/jim-kelly-clervoyant/"
+                        style="color:var(--accent);text-decoration:underline;">LinkedIn</a>.
+                </p>
+            <div class="contact" style="margin-top:2.5rem;">
+                <form action="" method="post" class="contact-form">
+                    <div>
+                        <label for="first-name">First Name</label>
+                        <input type="text" id="first-name" name="first-name" required>
+                    </div>
+                    <div>
+                        <label for="last-name">Last Name</label>
+                        <input type="text" id="last-name" name="last-name" required>
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div>
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+                    <button type="submit">Send</button>
+                </form>
+            
+            </div>
         </section>
     </div>
     <footer>
         &copy; 2025 Jim Kelly Clervoyant. All rights reserved.
     </footer>
 </body>
+
 </html>
