--- a/index.html
+++ b/index.html
@@ -1,84 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jim-Kelly - Portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css" type="text/css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css">
+    <title>My Portfolio</title>
 </head>
-
 <body>
     <header>
-        <h1>Jim-Kelly Clervoyant</h1>
-        <p>Développeur Web Junior</p>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
-        </nav>
+        <h1>Jim-Kelly's Portfolio</h1>
+        <p>Showcasing my coding projects</p>
     </header>
-    <div class="container">
-        <h2 class="section-title">About Me</h2>
-        <section id="about" class="about">
-            <p>
-                Je souhaite contribuer à une équipe ou à une entreprise dynamique où mes compétences en informatique
-                seront mises en valeur. J'ai acquis de l'expérience dans la création
-                de sites modernes et réactifs. J'aime relever de nouveaux défis techniques et collaborer avec d'autres
-                professionnels pour atteindre des objectifs communs. Mon objectif est de continuer à apprendre et à
-                évoluer dans le domaine de la technologie.
-            </p>
-        </section>
-        <section id="projects">
-            <h2 class="section-title">My Projects</h2>
-            <div class="projects">
-                <div class="project-card">
-                    <div>
-                        <div class="project-title">Passer Rating Calculator</div>
-                        <div class="project-desc">A calculator that assesses the efficiency of a quarterback's passing
-                            performance in American football (NFL)</div>
-                    </div>
-                    <a class="project-link" href="https://jimkellyc.github.io/PasserRatingNFL/" target="_blank">View
-                        Project</a>
-                </div>
-
-            </div>
-        </section>
-        <section style="margin-top:2.5rem;">
-            <h2 class="section-title">Contact</h2>
-            <p>
-                    Feel free to reach out via email or connect with me on
-                    <a href="https://www.linkedin.com/in/jim-kelly-clervoyant/"
-                        style="color:var(--accent);text-decoration:underline;">LinkedIn</a>.
-                </p>
-            <div class="contact" style="margin-top:2.5rem;">
-                <form action="" method="post" class="contact-form">
-                    <div>
-                        <label for="first-name">First Name</label>
-                        <input type="text" id="first-name" name="first-name" required>
-                    </div>
-                    <div>
-                        <label for="last-name">Last Name</label>
-                        <input type="text" id="last-name" name="last-name" required>
-                    </div>
-                    <div>
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div>
-                        <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit">Send</button>
-                </form>
-            
-            </div>
-        </section>
-    </div>
-    <footer>
-        &copy; 2025 Jim Kelly Clervoyant. All rights reserved.
+    <section class="about">
+        <h2>About Me</h2>
+        <p>Hi, I'm Jim-Kelly Clervoyant, a passionate developer with a love for coding and problem-solving. I enjoy creating web applications and exploring new technologies.</p>
+    </section>
+    <section class="projects" id="projects">
+        <!-- Projects will be injected here by JS -->
+    </section>
+    <footer class="footer">
+        <p>&copy; 2025 Jim-Kelly Clervoyant</p>
     </footer>
+    <script src="/js/script.js"></script>
 </body>
-
 </html>
