Add project display functionality for NFL Passer Rating Calculator

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <footer class="footer">
         <p>&copy; 2025 Jim-Kelly Clervoyant</p>
     </footer>
-    <script src="/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
