Refactor index.html, script.js, and styles.css to improve layout, navigation, and project display functionality

--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>My Portfolio</title>
 </head>
+
 <body>
-    <header>
-        <h1>Jim-Kelly's Portfolio</h1>
-        <p>Showcasing my coding projects</p>
-    </header>
-    <section class="about">
-        <h2>About Me</h2>
-        <p>Hi, I'm Jim-Kelly Clervoyant, a passionate developer with a love for coding and problem-solving. I enjoy creating web applications and exploring new technologies.</p>
+    <nav class="navbar">
+        <ul>
+            <li><a class="nav_links" href="#about">About</a></li>
+            <li><a class="nav_links" href="#projects">Projects</a></li>
+            <li><a class="nav_links" href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <section class="about" id="about">
+        <h1>Jim-Kelly Clervoyant</h1>
+        <p>This is my portfolio</p>
+    </section>
+    <section class="section-title">
+        <h1>My Projects</h1>
     </section>
     <section class="projects" id="projects">
-        <!-- Projects will be injected here by JS -->
+        <!-- Done via Javascript -->
+    </section>
+    <section class="contact" id="contact">
+        <h1>Contact Me</h1>
+        <p>Email: <a href="mailto:jimkellyclervoyant@gmail.com">jimkellyclervoyant@gmail.com</a>
     </section>
     <footer class="footer">
-        <p>&copy; 2025 Jim-Kelly Clervoyant</p>
+        <p>&copy; 2025 Jim-Kelly Clervoyant All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
