--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </nav>
     <section class="about" id="about">
         <h1>Jim-Kelly Clervoyant</h1>
-        <p>This is my portfolio</p>
+        <p>This is my portfolio.</p>
+        
     </section>
     <section class="section-title">
         <h1>My Projects</h1>
