Refactor index.html, script.js, and styles.css to clean up code, enhance footer text, and improve navbar hover effects

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <section class="about" id="about">
         <h1>Jim-Kelly Clervoyant</h1>
         <p>This is my portfolio.</p>
-        
     </section>
     <section class="section-title">
         <h1>My Projects</h1>
@@ -32,7 +31,7 @@
         <p>Email: <a href="mailto:jimkellyclervoyant@gmail.com">jimkellyclervoyant@gmail.com</a>
     </section>
     <footer class="footer">
-        <p>&copy; 2025 Jim-Kelly Clervoyant All rights reserved.</p>
+        <p>&copy; 2025 Jim-Kelly Clervoyant -- All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
